Maybe fixed the updates to Process Builder -- do NOT use quotes anywhere in the command line -- ProcessBuilder will handle that internally